Cleanup select for mobile, fix IPv6 addresses
On (some?) mobile browsers the select's `size` option has no effect so
this cleans it up a bit, moving the title to a fake option so it doesn't
make the desktop version look stupid with two headings.

If you get an IPv6 address, it could also be too long and make the whole
page need scrolling, so that's also fixed with a few extra styles.

--- a/src/public/assets/style.css
+++ b/src/public/assets/style.css
@@ -1,6 +1,14 @@
 body { text-align: center; }
 h2 { margin-top: 6vh; }
+form { margin-top: 10vh; }
 h2.ip { margin-bottom: 1vh; }
+span#ip {
+  display: inline-flex;
+  max-width: 90%;
+  max-width: -webkit-fill-available;
+  overflow-x: auto;
+  padding: 1vh 3vw;
+}
 p.ipfix { margin-top: 0; font-weight: bold; }
 
 small.login {
@@ -12,7 +20,13 @@ select {
   font-size: large;
   padding: 1rem;
 }
-
+select option:disabled {
+  background: transparent;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 1.3em;
+  color: black;
+}
 select option {
   padding: 1.5vh 3vw;
   text-align: center;
